--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "vue-loader": "^15.9.7",
+        "vue-router": "^3.5.2",
+        "vue-template-compiler": "^2.6.14"
+    },
+    "dependencies": {
+        "bulma": "^0.9.3",
+        "moment": "^2.29.1",
+        "vue": "^2.6.14"
     }
 }
